Finished all 6 workouts.  Still need to test them and the Store View Controller on a real iPad.

--- a/90 DWT 1/iPad_Chest + Back.storyboard
+++ b/90 DWT 1/iPad_Chest + Back.storyboard
@@ -6866,7 +6866,7 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="sL7-ER-LOD"/>
-        <segue reference="gEe-jn-lBh"/>
-        <segue reference="Nca-KJ-8XR"/>
+        <segue reference="qOG-tS-NMY"/>
+        <segue reference="PtH-LC-Wx3"/>
     </inferredMetricsTieBreakers>
 </document>
