--- a/90 DWT 1/iPad_Legs + Back.storyboard
+++ b/90 DWT 1/iPad_Legs + Back.storyboard
@@ -6729,6 +6729,6 @@
     <inferredMetricsTieBreakers>
         <segue reference="sFR-mC-Al6"/>
         <segue reference="hF0-7R-Dgq"/>
-        <segue reference="ONk-MH-HtY"/>
+        <segue reference="dfb-xl-13J"/>
     </inferredMetricsTieBreakers>
 </document>
