--- a/MainStoryboard_iPhone.storyboard
+++ b/MainStoryboard_iPhone.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UB1-up-tQC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="UB1-up-tQC">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
         <!--Normal-->
@@ -1210,7 +1210,7 @@
                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="1.8" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P0E-FY-vOM">
+                                                <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="1.8.1" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="P0E-FY-vOM">
                                                     <rect key="frame" x="281" y="11" width="24" height="21"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -1714,7 +1714,7 @@
         <scene sceneID="UyW-X4-vvy">
             <objects>
                 <navigationController definesPresentationContext="YES" id="EbT-dA-T65" customClass="MeasurementsNavController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Measure" image="icon-ruler.png" id="whz-y9-jAV"/>
+                    <tabBarItem key="tabBarItem" title="Measure" image="ruler" id="whz-y9-jAV"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="w5e-dv-liH">
                         <autoresizingMask key="autoresizingMask"/>
@@ -2079,7 +2079,7 @@
         <scene sceneID="c0g-iJ-zUS">
             <objects>
                 <navigationController definesPresentationContext="YES" id="cNb-TE-lc3" customClass="PhotoNavController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Photos" image="icon-pics2.png" id="YUi-Gd-CCz"/>
+                    <tabBarItem key="tabBarItem" title="Photos" image="pic_mountains" id="YUi-Gd-CCz"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="j4Q-IZ-jXF">
                         <autoresizingMask key="autoresizingMask"/>
@@ -2196,7 +2196,7 @@
         <scene sceneID="PX5-co-4sg">
             <objects>
                 <navigationController definesPresentationContext="YES" id="NYY-GR-4pV" customClass="SettingsNavController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Settings" image="icon-settings1.png" id="VY2-NU-t07"/>
+                    <tabBarItem key="tabBarItem" title="Settings" image="cogs" id="VY2-NU-t07"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="khs-st-eBB">
                         <autoresizingMask key="autoresizingMask"/>
@@ -2213,7 +2213,7 @@
         <scene sceneID="9uo-1Q-34o">
             <objects>
                 <navigationController definesPresentationContext="YES" id="9VW-E9-SeW" customClass="DataNavController" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Workouts" image="icon-workout.png" id="SZZ-nD-vXB"/>
+                    <tabBarItem key="tabBarItem" title="Workouts" image="weight_lifting" id="SZZ-nD-vXB"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="hBg-b1-4i0">
                         <autoresizingMask key="autoresizingMask"/>
@@ -6384,7 +6384,7 @@
         <scene sceneID="7gI-qB-4e6">
             <objects>
                 <navigationController id="hfC-kK-qnf" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Store" image="icon-cart.png" id="phQ-hk-sBP"/>
+                    <tabBarItem key="tabBarItem" title="Store" image="shop_cart" id="phQ-hk-sBP"/>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pzE-Wg-7O3">
@@ -35941,13 +35941,13 @@
         </scene>
     </scenes>
     <resources>
-        <image name="icon-cart.png" width="30" height="26"/>
-        <image name="icon-pics2.png" width="24" height="25"/>
+        <image name="cogs" width="32" height="32"/>
         <image name="icon-reveal.png" width="22" height="17"/>
-        <image name="icon-ruler.png" width="23" height="23"/>
-        <image name="icon-settings1.png" width="31" height="24"/>
-        <image name="icon-workout.png" width="22" height="22"/>
         <image name="nav_r_arrow_white" width="22" height="23"/>
+        <image name="pic_mountains" width="32" height="32"/>
+        <image name="ruler" width="32" height="32"/>
+        <image name="shop_cart" width="32" height="32"/>
+        <image name="weight_lifting" width="32" height="32"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
